--- a/src/app/merchantregistration/merchantregistration.component.html
+++ b/src/app/merchantregistration/merchantregistration.component.html
@@ -1,3 +1,4 @@
+
 <app-merchant-header></app-merchant-header>
 <div class="container">
     <div class="head"><h1>Merchant Registration</h1></div>
@@ -6,65 +7,82 @@
         <div class="row1">
             <div class="row1_col1" class="col">
                 <input type="text" placeholder="Restaurant Name" id="m_name" [(ngModel)] = "registerModel.m_name" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col1_lb">Name</label>
             </div>
             <div class="row1_col2" class="col">
                 <input type="text" placeholder="Restaurant Starting Year " id="m_experience" [(ngModel)] = "registerModel.m_experience" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col2_lb">Year</label>
             </div>
             <div class="row1_col3" class="col">
                 <input type="text" placeholder="Restaurant Specials" id="m_specials" [(ngModel)] = "registerModel.m_specials" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col3_lb">Specials</label>
             </div>
             <div class="row1_col4" class="col">
                 <input type="text" placeholder="Restaurant Latitude" id="m_latitude" [(ngModel)] = "registerModel.m_latitude" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col4_lb">Latitude</label>
             </div>
         </div>
         <div class="row2">
             <div class="row2_col1" class="col">
                 <input type="text" placeholder="Restaurant Categories " id="m_categories" [(ngModel)] = "registerModel.m_categories" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col1_lb">Categories</label>
             </div>
             <div class="row2_col2" class="col">
                 <input type="text" placeholder="Restaurant Cusines " id="m_cusines" [(ngModel)] = "registerModel.m_cusines" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col2_lb">Cusines</label>
             </div>
             <div class="row2_col3" class="col">
                 <input type="text" placeholder="Restaurant Services" id="m_services" [(ngModel)] = "registerModel.m_services" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col3_lb">Services</label>
             </div>
             <div class="row2_col4" class="col">
                 <input type="text" placeholder="Restaurant Longitude" id="m_longitude" [(ngModel)] = "registerModel.m_longitude" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col4_lb">Longitude</label>
             </div>
         </div>
         <div class="row3">
             <div class="row3_col1" class="col">
                 <input type="text" placeholder="Restaurant Open Time" id="m_open_time" [(ngModel)] = "registerModel.m_open_time" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col1_lb">Open Time</label>
             </div>
             <div class="row3_col2" class="col">
                 <input type="text" placeholder="Restaurant Close Time" id="m_close_time" [(ngModel)] = "registerModel.m_close_time" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col2_lb">Close Time</label>
             </div>
             <div class="row3_col3" class="col">
                 <input type="text" placeholder="Restaurant minimum price " id="m_min_price" [(ngModel)] = "registerModel.m_min_price" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col3_lb">Min Price</label>
             </div>
             <div class="row3_col4" class="col">
                 <input type="text" placeholder="Restaurant maximum price" id="m_max_price" [(ngModel)] = "registerModel.m_max_price" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col4_lb">Max Price</label>
             </div>
 
         </div>
         <div class="row4">
             <div class="row4_col1" class="col">
                 <input type="text" placeholder="Restaurant Street" id="m_street" [(ngModel)] = "registerModel.m_street" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col1_lb">Street</label>
             </div>
             <div class="row4_col2" class="col">
                 <input type="text" placeholder="Restaurant Area" id="m_area" [(ngModel)] = "registerModel.m_area" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col2_lb">Area</label>
             </div>
             <div class="row4_col3" class="col">
                 <input type="text" placeholder="Restaurant City" id="m_city" [(ngModel)] = "registerModel.m_city" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col3_lb">City</label>
             </div>
             <div class="row4_col4" class="col">
                 <input type="text" placeholder="Restaurant Pincode" id="m_pincode" [(ngModel)] = "registerModel.m_pincode" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col4_lb">Pincode</label>
             </div>
             
             
         </div>
         <div class="row5">
-            <div class="row5_col1">
+            <div class="row5_col1" >
                 <input type="text" placeholder="Restaurant Address" id="m_address" [(ngModel)] = "registerModel.m_address" [ngModelOptions]="{standalone: true}">
+                <label for="" class="col5_lb">Address</label>
             </div>
             <div class="row5_col2">
                 <input type="submit" id="submit_bt" value="Submit" (click)="merchantRegistration()">
