--- a/src/app/merchantsearch/merchantsearch.component.html
+++ b/src/app/merchantsearch/merchantsearch.component.html
@@ -1,28 +1,40 @@
-
 <app-header></app-header>
 <div class="container">
-
-
-<div class="body_box">
-    <div class="search">
-        <div class="logo_box">
-            <img src="assets/logo2.png" alt="" >
-        </div>
-        <div class="search_box">
-            <form action="" class="search_bar">
-                <select name="" id="opt">
-                    <option value="" >Location</option>
-                    <option value="" >vskp</option>
-                    <option value="" >hyd</option>
-                </select>
-                <input type="search" placeholder="Search">
-                <button type="submit">
-                    <span class="material-symbols-outlined">
-                        search
+    <div class="body_box">
+        <div class="search">
+            <div class="logo_box">
+                <div class="logo_box_col1">
+                    <h1>Cusine</h1>
+                </div>
+                <div class="logo_box_col2">
+                    <h1>Compass</h1>
+                </div>
+            </div>
+            <div class="search_box">
+                <form action="" class="search_bar">
+                    <select name="" id="opt">
+                        <option value="">Location</option>
+                        <option value="">vskp</option>
+                        <option value="">hyd</option>
+                    </select>
+                    <input type="search" placeholder="Search">
+                    <button type="submit">
+                        <span class="material-symbols-outlined">
+                            search
                         </span>
-                </button>
-            </form>
+                    </button>
+                </form>
+            </div>
+            <!--<div class="store_box">
+                <div class="store_box_col">
+                    <div class="store_logo">
+                        <div class="store_logo_img"></div>
+                    </div>
+                    <div class="store_name"></div>
+                </div>
+                <div class="store_box_col"></div>
+                <div class="store_box_col"></div>
+            </div>-->
         </div>
     </div>
-</div>
 </div>
