--- a/src/app/store-reviews/store-reviews.component.css
+++ b/src/app/store-reviews/store-reviews.component.css
@@ -2,6 +2,7 @@
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
+  width: 100%;
 }
 
 th {
@@ -13,58 +14,99 @@ td {
   text-align: center;
   padding: 1.5vw;
 }
+
 thead th {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    font-size: 1.25vw;
-    padding: 1.5vw;
-    background-color: #e94b3cff;
-    color: white;
-  }
-  .review_table {
-    height: 60vh;
-    overflow: scroll;
-    width: 80vw;
-    margin-left: 10vw;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  padding: 1.5vw;
+  font-size: 1.25vw;
+  background-color: #e94b3cff;
+  color: white;
+}
+
+.review {
+  width: 45vw;
+}
+.date {
+  width: 10vw;
+}
+.status {
+  width: 5vw;
+}
+.user {
+  width: 15vw;
+}
+.rating {
+  width: 5vw;
+}
+.action {
+  width: 8vw;
+  height: 100%;
+}
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 700,
+  'GRAD' 0,
+  'opsz' 48
+}
+.act{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.accept-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: white;
+    color: #32751d;
+    cursor: pointer;
     
-  }
-
-  .review {
-    width: 50vw;
-  }
-  .date {
-    width: 15vw;
-  }
-  .status {
-    width: 5vw;
-  }
-  .user {
-    width: 15vw;
-  }
-  .rating {
-    width: 5vw;
-  }
-
-.container{
-    width: 100vw;
-    padding-bottom: 20px;
 }
-.head{
-    height: 10vh;
-    width: 90vw;
-    margin-left: 5vw;
+.reject-btn{
     display: flex;
     align-items: center;
     justify-content: center;
+    border: none;
+    background-color: white;
+    color: #e94b3cff;
+    cursor: pointer;
+    
+    
 }
-.heading{
-    height: 10vh;
-    width: 80vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.15vw;
-    color: #00203fff;
+
+/*Table css ends here*/
+
+/*Headding css*/
+.head {
+  display: flex;
+  height: 10vh;
+  width: 90vw;
+  display: flex;
+  margin-left: 5vw;
+  align-items: center;
+  justify-content: center;
+}
+.heading {
+  height: 10vh;
+  width: 80vw;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  color: #00203fff;
+  font-size: 1.5vw;
+}
+.review_table {
+  width: 90vw;
+  margin-left: 5vw;
+  height: 60vh;
+  overflow: scroll;
 }
